# monitoring-module

./: .env.example  .gitignore  pyproject.toml
monitoring_module/: __init__.py  config.py  core.py  middleware.py  security.py  webhook.py
monitoring_module/db/: __init__.py  base.py  supabase_adapter.py
monitoring_module/routes/: health.py  monitoring.py
tests/: conftest.py  test_config.py  test_core.py  test_health_tier1.py  test_health_tier2.py  test_middleware.py  test_security.py
