[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring-module"
version = "1.0.0"
description = "MonitoringModule — health check, error reporting e backup para apps FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
supabase = ["supabase>=2.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["monitoring_module*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
